--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="img/PNG/logo_Trocot-04.png" alt="">
+        <ul>
+            <li>
+                <a href="#">О нас</a>
+            </li>
+            <li>
+                <a href="#">Преимущества</a>
+            </li>
+            <li>
+                <a href="#">Отзывы</a>
+            </li>
+            <li>
+                <a href="#">Контакты</a>
+            </li>
+        </ul>
+    </header>
+    <main>
+        
+    </main>
+    <footer></footer>
 </body>
 </html>
+
